fixed profile picture cropping

--- a/client/src/styles/stylesUserPictures.css
+++ b/client/src/styles/stylesUserPictures.css
@@ -15,6 +15,7 @@
   top: -4rem;
   cursor: pointer;
   user-select: none;
+  object-fit: cover;
   width: 256px;
   height: 256px;
 }
